test/langtools/tools/javac/valhalla/lworld-values/CheckMakeDefault.out
CheckMakeDefault.java:9:15: compiler.err.illegal.combination.of.modifiers: interface, value
CheckMakeDefault.java:10:24: compiler.err.illegal.combination.of.modifiers: abstract, value
CheckMakeDefault.java:13:26: compiler.err.make.default.with.nonvalue
CheckMakeDefault.java:35:25: compiler.err.make.default.with.nonvalue
4 errors
